# micro_kafka

./: .gitignore  Makefile  README.md  compose.yaml
notifications/: Dockerfile  pyproject.toml
notifications/src/: main.py
orders/: Dockerfile  pyproject.toml
orders/migrations/: env.py  script.py.mako
orders/migrations/versions/: de5e7aa5d18b_.py
orders/src/: common_types.py  main.py
orders/src/application/orders/: dto.py  exceptions.py  services.py  workers.py
orders/src/config/: app.py  db.py  kafka.py  redis.py
orders/src/infra/db/: engine.py  migrations.py  repositories.py  schema.py
orders/src/infra/kafka/: producers.py  registry.py  schemas.py
orders/src/infra/redis/: base.py  clients.py  mixins.py  repositories.py
orders/src/infrastructure/kafka/: config.py  producers.py
orders/src/presentation/: deps.py  router.py
orders/src/presentation/routes/orders/: deps.py  router.py  schemas.py
orders/src/utils/: event_loop.py  kafka.py
payment/: Dockerfile  pyproject.toml
payment/src/: main.py
shipping/: Dockerfile  pyproject.toml
shipping/src/: main.py
