[project]
name = "notifications"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4.0",
    "authlib>=1.6.5",
    "cachetools>=6.2.1",
    "confluent-kafka>=2.12.0",
    "fastapi[standard]>=0.118.3",
    "jsonschema>=4.25.1",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "referencing>=0.37.0",
    "tenacity>=9.1.2",
]
